# Focus

./: BUILD-GUIDE.md
.github/workflows/: build.yml
floating-focus/.github/workflows/: build.yml
floating-focus/src/: index.html
floating-focus/src-tauri/: Cargo.toml  tauri.conf.json
floating-focus/src-tauri/capabilities/: default.json
floating-focus/src-tauri/src/: main.rs
