[package]
name = "floating-focus"
version = "6.0.0"
description = "Tiny always-on-top focus timer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
